# Terrain_Trees

./: .gitignore  .gitmodules  CMakeDoxyfile.tpl.bak  CMakeLists.txt  README.md  clean_build_and_cmake_config_files.sh
data/: .gitignore  clean_up.sh
sources/: .gitignore  CMakeLists.txt
sources/basic_types/: basic_wrappers.h  box.h  soup.h  triangle.h  vertex.h
sources/core_library/: .gitignore  CMakeLists.txt  README.md
sources/core_library/lib/: .gitignore
sources/core_library/sources/: CMakeLists.txt
sources/core_library/sources/basic_types/: Matrix.h  basic_wrappers.h  edge.h  explicit_triangle.h  lru_cache.h  mesh.h  point.h  triangle.h  vertex.h
sources/core_library/sources/curvature/: abstract_curvature.cpp  border_checker.cpp  c_curvature.cpp  concentrated_curvature.cpp  concentrated_curvature.h
sources/core_library/sources/edge_contraction/: contraction_simplifier.cpp  contraction_simplifier.h  gradient_aware_contraction.cpp  gradient_aware_contraction.h  simplification_aux_structures.h  smooth.cpp  smooth.h
sources/core_library/sources/geometry/: geometry.cpp  geometry_curvature.cpp  geometry_curvature.h  geometry_slope.cpp  geometry_slope.h  geometry_wrapper.cpp  geometry_wrapper.h
sources/core_library/sources/gradient/: Gradient.cpp  Gradient.h
sources/core_library/sources/io/: writer.cpp  writer.h  writer_morse.cpp  writer_morse.h
sources/core_library/sources/morse/: dangling_paths_handler.cpp  dangling_paths_handler.h  forman_global_simplifier.cpp  forman_gradient.cpp  forman_gradient.h  forman_gradient_ascending1cells.cpp  forman_gradient_ascending2cells.cpp  forman_gradient_aux_structure.h  forman_gradient_caching_structure.h  forman_gradient_computation.cpp  forman_gradient_computation.h  forman_gradient_critical_clusters.cpp  forman_gradient_descending1cells.cpp  forman_gradient_descending2cells.cpp  forman_gradient_features_extractor.h  forman_gradient_incidencegraph.cpp  forman_gradient_simplifier.h  forman_gradient_stats.h  forman_gradient_topological_relations.cpp  forman_gradient_topological_relations.h  forman_local_simplifier.cpp  ig.h  triangle_gradient.h
sources/core_library/sources/queries/: topological_queries.cpp  topological_queries_batched.h
sources/core_library/sources/roughness/: Roughness.cpp  Roughness.h
sources/core_library/sources/statistics/: index_statistics.h  statistics.cpp
sources/core_library/sources/terrain_features/: Aspect.cpp  Aspect.h  critical_points_extractor.h  slope_extractor.cpp  slope_extractor.h
sources/core_library/sources/terrain_trees/: mesh_updater.cpp  mesh_updater.h  node.h  node_t.cpp  node_t.h  node_v.cpp  node_v.h  pmrt_tree.cpp  prt_tree.cpp  prt_tree.h  reindexer.h  tree.h
sources/core_library/sources/utilities/: cli_parameters.h  container_utilities.h  lru_cache.h  sorting.cpp  sorting.h  string_management.cpp
sources/curvature/: abstract_curvature.h  border_checker.h  c_curvature.h
sources/geometry/: geometry.h  geometry_slope.cpp  geometry_slope.h  geometry_wrapper.cpp
sources/io/: reader.cpp  reader.h  writer.h
sources/queries/: priority_queue_element.h  spatial_queries.cpp  spatial_queries.h  topological_queries.h  topological_queries_batched.h  topological_queries_windowed.h
sources/statistics/: full_query_statistics.h  query_statistics.h  statistics.h
sources/targets/: main.cpp
sources/terrain_features/: critical_points_extractor.cpp  critical_points_extractor.h  slope_extractor.h
sources/terrain_trees/: node.h  node_t.cpp  node_t.h  node_v.cpp  pmrt_tree.h  pmt_tree.cpp  pmt_tree.h  prt_tree.cpp  reindexer.cpp  run_iterator.h  spatial_subdivision.cpp  spatial_subdivision.h
sources/tests/: test_all_operations.cpp  test_cost_range.cpp  test_curvature.cpp  test_edge_contraction.cpp  test_edge_contraction_parallel.cpp  test_grad_edge_contraction_para.cpp  test_gradient.cpp  test_index_and_VT.cpp  test_morse.cpp  test_morse_simplification.cpp  test_multivariate_morse.cpp  test_roughness.cpp  test_smooth.cpp  test_spatial_queries.cpp  test_terrain_feature_extraction.cpp
sources/utilities/: input_generator.cpp  input_generator.h  sorting_structure.h  string_management.h  timer.h  usage.h  utility_functions.cpp  utility_functions.h
targets/: main.cpp
tests/: test_batched_queries.cpp  test_soup.cpp  test_spatial_index_generation.cpp  test_spatial_queries.cpp
